@@ -124,6 +124,11 @@ class ImageBuilder extends FiveUpgrade {
 		
 		// Fill in the new image info fields
 		$info = $this->imageInfo( $row->img_name );
+
+		global $wgMemc, $wgDBname;
+		$key = $wgDBname . ":Image:" . md5( $row->img_name );
+		$wgMemc->delete( $key );
+
 		return array(
 			'img_width'      => $info['width'],
 			'img_height'     => $info['height'],
@@ -232,6 +237,11 @@ class ImageBuilder extends FiveUpgrade {
 			} else {
 				$filename = $this->renameFile( $filename );
 			}
+		}
+		
+		if( $filename == '' ) {
+			$this->log( "Empty filename for $fullpath" );
+			return;
 		}
 		
 		$fields = array(
